01-ingress-controller/01-ingress-haproxy/latihan/03-ingres-webdemo.yaml
#03-ingres-webdemo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: testing
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: webdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
